Финальный проект / Сложный уровень

--- a/.github/workflows/go_check.yaml
+++ b/.github/workflows/go_check.yaml
@@ -7,90 +7,123 @@ on:
     branches: [ main, master ]
 
 jobs:
-  test:
-    name: Run Tests
+  build-and-push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_DB: project-sem-1
-          POSTGRES_USER: validator
-          POSTGRES_PASSWORD: val1dat0r
-        ports:
-          - 5432:5432
-        # Добавляем volume для сохранения данных
-        volumes:
-          - postgres_data:/var/lib/postgresql/data
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/project-sem-1:latest .
+
+    - name: Push to Docker Hub
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/project-sem-1:latest
+
+  deploy-and-test:
+    name: Deploy to Yandex Cloud and Test
+    runs-on: ubuntu-latest
+    needs: build-and-push
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.23'
+    - name: Install Yandex Cloud CLI
+      run: |
+        curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
+        echo "/opt/yc/bin" >> $GITHUB_PATH
+
+    - name: Configure Yandex Cloud CLI
+      run: |
+        /opt/yc/bin/yc config set token "${{ secrets.YC_TOKEN }}"
+        /opt/yc/bin/yc config set cloud-id "${{ secrets.YC_CLOUD_ID }}"
+        /opt/yc/bin/yc config set folder-id "${{ secrets.YC_FOLDER_ID }}"
+
+    - name: Setup SSH key
+      run: |
+        mkdir -p $HOME/.ssh
+        echo "${{ secrets.SSH_PUBLIC_KEY }}" > $HOME/.ssh/id_rsa.pub
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME/.ssh/id_rsa
+        chmod 600 $HOME/.ssh/id_rsa
+        chmod 644 $HOME/.ssh/id_rsa.pub
 
     - name: Make scripts executable
+      run: chmod +x scripts/*.sh
+
+    - name: Deploy to Yandex Cloud VM (run.sh)
+      id: deploy
       run: |
-        chmod +x scripts/prepare.sh
-        chmod +x scripts/run.sh
-        chmod +x scripts/tests.sh
-
-    - name: Prepare environment
-      run: ./scripts/prepare.sh
-
-    - name: Run application
-      run: ./scripts/run.sh
+        export SSH_PUBLIC_KEY="$HOME/.ssh/id_rsa.pub"
+        VM_IP=$(./scripts/run.sh)
+        echo "vm_ip=$VM_IP" >> $GITHUB_OUTPUT
+        echo "VM deployed at: $VM_IP"
       env:
-        POSTGRES_HOST: localhost
-        POSTGRES_PORT: 5432
-        POSTGRES_DB: project-sem-1
-        POSTGRES_USER: validator
-        POSTGRES_PASSWORD: val1dat0r
+        YC_TOKEN: ${{ secrets.YC_TOKEN }}
+        YC_CLOUD_ID: ${{ secrets.YC_CLOUD_ID }}
+        YC_FOLDER_ID: ${{ secrets.YC_FOLDER_ID }}
+        YC_ZONE: ${{ secrets.YC_ZONE }}
+        YC_SUBNET_ID: ${{ secrets.YC_SUBNET_ID }}
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        APP_DB_HOST: ${{ secrets.APP_DB_HOST }}
+        APP_DB_PORT: ${{ secrets.APP_DB_PORT }}
+        APP_DB_NAME: ${{ secrets.APP_DB_NAME }}
+        APP_DB_USER: ${{ secrets.APP_DB_USER }}
+        APP_DB_PASSWORD: ${{ secrets.APP_DB_PASSWORD }}
+        APP_PORT: ${{ secrets.APP_PORT }}
 
-    - name: Test Level 1
-      id: test-level-1
-      continue-on-error: true
-      run: ./scripts/tests.sh 1
-      env:
-        POSTGRES_HOST: localhost
-        POSTGRES_PORT: 5432
-        POSTGRES_DB: project-sem-1
-        POSTGRES_USER: validator
-        POSTGRES_PASSWORD: val1dat0r
-
-    - name: Test Level 2
-      id: test-level-2
-      continue-on-error: true
-      run: ./scripts/tests.sh 2
-      env:
-        POSTGRES_HOST: localhost
-        POSTGRES_PORT: 5432
-        POSTGRES_DB: project-sem-1
-        POSTGRES_USER: validator
-        POSTGRES_PASSWORD: val1dat0r
+    - name: Wait for services to start
+      run: sleep 30
 
     - name: Test Level 3
       id: test-level-3
       continue-on-error: true
       run: ./scripts/tests.sh 3
       env:
-        POSTGRES_HOST: localhost
-        POSTGRES_PORT: 5432
-        POSTGRES_DB: project-sem-1
-        POSTGRES_USER: validator
-        POSTGRES_PASSWORD: val1dat0r
+        API_HOST: ${{ steps.deploy.outputs.vm_ip }}
+        APP_PORT: ${{ secrets.APP_PORT }}
+        APP_DB_PORT: ${{ secrets.APP_DB_PORT }}
+        APP_DB_NAME: ${{ secrets.APP_DB_NAME }}
+        APP_DB_USER: ${{ secrets.APP_DB_USER }}
+        APP_DB_PASSWORD: ${{ secrets.APP_DB_PASSWORD }}
+
+    - name: Test Level 2
+      id: test-level-2
+      continue-on-error: true
+      run: ./scripts/tests.sh 2
+      env:
+        API_HOST: ${{ steps.deploy.outputs.vm_ip }}
+        APP_PORT: ${{ secrets.APP_PORT }}
+        APP_DB_PORT: ${{ secrets.APP_DB_PORT }}
+        APP_DB_NAME: ${{ secrets.APP_DB_NAME }}
+        APP_DB_USER: ${{ secrets.APP_DB_USER }}
+        APP_DB_PASSWORD: ${{ secrets.APP_DB_PASSWORD }}
+
+    - name: Test Level 1
+      id: test-level-1
+      continue-on-error: true
+      run: ./scripts/tests.sh 1
+      env:
+        API_HOST: ${{ steps.deploy.outputs.vm_ip }}
+        APP_PORT: ${{ secrets.APP_PORT }}
+        APP_DB_PORT: ${{ secrets.APP_DB_PORT }}
+        APP_DB_NAME: ${{ secrets.APP_DB_NAME }}
+        APP_DB_USER: ${{ secrets.APP_DB_USER }}
+        APP_DB_PASSWORD: ${{ secrets.APP_DB_PASSWORD }}
+
+    - name: Show VM logs on failure
+      if: failure()
+      run: |
+        ssh -o StrictHostKeyChecking=no yc-user@${{ steps.deploy.outputs.vm_ip }} "sudo docker compose -f /tmp/docker-compose.yaml logs" || true
 
     - name: Check test results
-      if: always()
       run: |
+        echo "VM IP: ${{ steps.deploy.outputs.vm_ip }}"
         if [[ "${{ steps.test-level-1.outcome }}" == "success" ]] || \
            [[ "${{ steps.test-level-2.outcome }}" == "success" ]] || \
            [[ "${{ steps.test-level-3.outcome }}" == "success" ]]; then
